--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <div class="nav">
                 <nav class="navbar">
                     <li>
-                        <a href="">home</a>
+                        <a href="#home">#home</a>
                     </li>
                     <li>
-                        <a href="">about_me</a>
+                        <a href="#about_me">#about_me</a>
                     </li>
                     <li>
-                        <a href="">projects</a>
+                        <a href="#projects">#projects</a>
                     </li>
                     <li>
-                        <a href="">contact_me</a>
+                        <a href="#contact_me">#contact_me</a>
                     </li>
                     
                 </nav>
@@ -44,6 +44,16 @@
                     <img class="img" src="2x2.jpg" alt="">
                 </div>   
 
+            </div>
+
+            <div class="about_me" id="about_me">
+                <div class="about_me_title">
+                    about_me
+                </div>
+                <div class="paragraphs">
+                    <p>Hi! I'm Jeryll Zita, a web developer from Bulacan, Philippines. I specialize in backend development with PHP and Laravel, but I'm also comfortable with frontend work and adapting to various tools as needed. </p>
+                    <p>I'm currently open to opportunities where I can grow, solve challenges, and keep learning. Let’s connect!</p>
+                </div>
             </div>
         </div>
 
