--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Jeryll</title>
 </head>
@@ -53,6 +54,21 @@
                 <div class="paragraphs">
                     <p>Hi! I'm Jeryll Zita, a web developer from Bulacan, Philippines. I specialize in backend development with PHP and Laravel, but I'm also comfortable with frontend work and adapting to various tools as needed. </p>
                     <p>I'm currently open to opportunities where I can grow, solve challenges, and keep learning. Let’s connect!</p>
+                </div>
+
+                <div class="prog_and_tools">
+                    Progra<span>mming & Tools</span>
+                </div>
+                <div class="skills">
+                    <div class="tools">
+                        <div class="s">PHP</div>
+                        <div class="s">MySql</div>
+                        <div class="s">Git</div>
+                    </div>
+                    <div class="tools">
+                        <div class="s">HTML & CSS</div>
+                        <div class="s">javascript</div>
+                    </div>
                 </div>
             </div>
         </div>
