contact_me ui done

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <div class="contact_me">
+            <div class="contact_me" id="contact_me">
                 <div class="contact_me_title">
                     contact_me
                 </div>
@@ -120,7 +120,7 @@
                 <p style="font-weight: bold; font-size: 1.2rem; color: #fff; text-shadow: 0 2px 3px rgba(0,0,0,0.3);">
                     Connect with me</p>
 
-                <div class="contact_me_page">
+                <div class="contact_me_page" >
                     <div class="socials">
                         <div class="email">
                             <i class="fa-solid fa-envelope"></i> jeryllzita55@gmail.com
@@ -138,7 +138,7 @@
                     <div class="email_me">
                         <form class="email_me" id="contact-form">
                             <!-- To simplify the tutorial, the value is static. -->
-                            <input type="hidden" name="time" value="Mar 10 2025 08:46">
+                            <!-- <input type="hidden" name="time" value="Mar 10 2025 08:46"> -->
                             <label>Name</label>
                             <input type="text" name="name" required>
                             <label>Email</label>
