--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h3>I'm a web developer</h3>
                     <h4>I aim to develop robust web apps with scalable backend.</h4>
                     <div class="button_div">
-                        <button class="get_touch">Get in touch --></button>
+                        <button class="get_touch" onclick="document.getElementById('contact_me').scrollIntoView({behavior:'smooth'});">Get in touch --></button>
                     </div>
                 </div>
                 <div class="image">
@@ -123,8 +123,8 @@
                             <i class="fa-solid fa-envelope"></i> jeryllzita55@gmail.com
                         </div>
                         <div class="github">
-                            <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i>
-                                neejay_cloud05</a>
+                            <a href="https://github.com/neejay-cloud05" target="_blank"><i class="fab fa-github"></i>
+                                neejay-cloud05</a>
                         </div>
                         <div class="linkedin">
                             <a href="https://linkedin.com/in/yourusername" target="_blank"><i
