--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="top_bar">
             <div class="title"><span>JB</span>Z</div>
-            
+
             <div class="nav">
                 <nav class="navbar">
                     <li>
@@ -47,7 +47,7 @@
                 </nav>
             </div>
 
-           
+
         </div>
 
         <div class="content">
@@ -57,7 +57,9 @@
                     <h3>I'm a web developer</h3>
                     <h4>I aim to develop robust web apps with scalable backend.</h4>
                     <div class="button_div">
-                        <button class="get_touch" onclick="document.getElementById('contact_me').scrollIntoView({behavior:'smooth'});">Get in touch --></button>
+                        <button class="get_touch"
+                            onclick="document.getElementById('contact_me').scrollIntoView({behavior:'smooth'});">Get in
+                            touch --></button>
                     </div>
                 </div>
                 <div class="image">
@@ -153,7 +155,26 @@
 
         </div>
 
-        <footer>C Jeryll</footer>
+        <footer>
+            <div class="footer">
+                <div >
+                    Built with
+                </div>
+                <div class="icons">
+                    <i class="fa-brands fa-html5" style="color:#e34c26;"></i>
+                    <i class="fa-brands fa-css3-alt" style="color:#264de4;"></i>
+                    <i class="fa-brands fa-js" style="color:#f7df1e;"></i>
+                    <i class="fa-brands fa-font-awesome" style="color:#528dd7;"></i>
+                </div>
+
+                <div class="credit">
+                    <i\></i>& Made with ❤️ by Me
+                </div>
+            </div>
+            <div class="credit_to">
+                <i class="fa-regular fa-copyright"></i> 2025
+            </div>
+        </footer>
 
         <div class="notif" id="notif">
 
