socials in intro, button font size fixed

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
         <div class="content">
             <div class="home">
                 <div class="intro">
+                    <div class="socials_intro">
+                        <div class="github_intro">
+                            <a href="https://github.com/neejay-cloud05" target="_blank"><i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                        <div class="linkedin_intro">
+                            <a href="https://linkedin.com/in/yourusername" target="_blank"><i
+                                    class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
                     <h1>Hey, I'm <span>Jeryll</span>.</h1>
                     <h3>I'm a web developer</h3>
                     <h4>I aim to develop robust web apps with scalable backend.</h4>
@@ -157,7 +167,7 @@
 
         <footer>
             <div class="footer">
-                <div >
+                <div>
                     Built with
                 </div>
                 <div class="icons">
