--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single+Ink:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap&family=Alan+Sans:wght@300..900&family=Titan+One&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="img/favicon.png" type="image/x-png">
     <title>Jeryll</title>
 </head>
 
@@ -75,7 +76,7 @@
                 <div class="image">
                     <div class="vector"></div>
 
-                    <img class="img" src="2x2.jpg" alt="">
+                    <img class="img" src="img/2x2.jpg" alt="">
                 </div>
 
             </div>
