burger menu added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single+Ink:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap&family=Alan+Sans:wght@300..900&family=Titan+One&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="img/favicon.png" type="image/x-png">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-png">
     <title>Jeryll</title>
 </head>
 
@@ -46,6 +46,9 @@
                     </li>
 
                 </nav>
+                <div class="hamburger" id="hamburger">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
 
 
