--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <body>
     <div class="container">
 
-        <div class="top_bar">
+        <div class="top_bar" id="topbar-div">
             <div class="title"><span>JB</span>Z</div>
 
-            <div class="nav">
+            <div class="nav" id="navbar-div">
                 <nav class="navbar" id="navbar_links">
                     <li>
                         <a href="#home">#home</a>
@@ -238,10 +238,22 @@
             navlinks.classList.toggle("active");
         });
 
+
+        const navbar = document.getElementById('topbar-div');
+
+        window.addEventListener("scroll", () => {
+            if (window.scrollY > 50) {
+                navbar.classList.add('minimized');
+            } else {
+                navbar.classList.remove('minimized');
+
+            }
+        });
+
     }
 
 
-
+ 
 
 </script>
 
