--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="home">
 
         <div class="top_bar" id="topbar-div">
             <div class="title"><span>JB</span>Z</div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="content">
-            <div class="home">
+            <div class="home" >
                 <div class="intro">
                     <div class="socials_intro">
                         <div class="github_intro">
@@ -84,7 +84,7 @@
 
             </div>
 
-            <div class="about_me" id="about_me">
+            <div class="about_me" >
                 <div class="about_me_title">
                     about_me
                 </div>
