better scrolling with the use of nav

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="content">
-            <div class="home" >
+            <div class="home">
                 <div class="intro">
                     <div class="socials_intro">
                         <div class="github_intro">
@@ -84,7 +84,7 @@
 
             </div>
 
-            <div class="about_me" >
+            <div class="about_me" id="about_me">
                 <div class="about_me_title">
                     about_me
                 </div>
@@ -253,7 +253,7 @@
     }
 
 
- 
+
 
 </script>
 
