--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                             </a>
                         </div>
                         <div class="linkedin_intro">
-                            <a href="https://linkedin.com/in/yourusername" target="_blank"><i
+                            <a href="https://linkedin.com/in/jeryllzita" target="_blank"><i
                                     class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                     <h1>Hey, I'm <span>Jeryll</span>.</h1>
-                    <h3>I'm a web developer</h3>
-                    <h4>I aim to develop robust web apps with scalable backend.</h4>
+                    <h3>I'm a <span></span></h3>
+                    <h4></h4>
                     <div class="button_div">
                         <button class="get_touch"
                             onclick="document.getElementById('contact_me').scrollIntoView({behavior:'smooth'});">Get in
@@ -143,7 +143,7 @@
                                 neejay-cloud05</a>
                         </div>
                         <div class="linkedin">
-                            <a href="https://linkedin.com/in/yourusername" target="_blank"><i
+                            <a href="https://linkedin.com/in/jeryllzita" target="_blank"><i
                                     class="fab fa-linkedin"></i> Jeryll Zita</a>
                         </div>
                     </div>
