--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 
         <div class="content">
             <div class="home">
+
+                <div class="floater floater1"></div>
+                <div class="floater floater2"></div>
+
                 <div class="intro">
                     <div class="socials_intro">
                         <div class="github_intro">
