--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
@@ -20,7 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single+Ink:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap&family=Alan+Sans:wght@300..900&family=Titan+One&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-png">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-png">
     <title>Jeryll</title>
 </head>
 
@@ -83,7 +83,7 @@
                     <div class="image">
                         <div class="vector"></div>
             
-                        <img class="img" src="img/2x2.jpg" alt="">
+                        <img class="img" src="assets/img/2x2.jpg" alt="">
                     </div>
             
                 </div>
@@ -249,13 +249,13 @@
         });
 
 
-        const navbar = document.getElementById('topbar-div');
+        const top_bar = document.getElementById('topbar-div');
 
         window.addEventListener("scroll", () => {
             if (window.scrollY > 50) {
-                navbar.classList.add('minimized');
+                top_bar.classList.add('minimized');
             } else {
-                navbar.classList.remove('minimized');
+                top_bar.classList.remove('minimized');
 
             }
         });
